manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    env: dev
    app: main
spec:
  replicas: 1
  selector:
    matchLabels:
      project: webapp
  template:
    metadata:
      labels:
        project: webapp
    spec:
      containers:
        - name: postgres-container
          image: postgres:12.0-alpine
          ports:
            - containerPort: 5432 # Port on Pod

        - name: django-container
          image: sdieul/task1_backend_main_django:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    emv: dev
    owner: AntonGorynia
spec:
  type: LoadBalancer
  selector:
    project: webapp  # Selecting PODS with those Labels
  ports:
    - name: app-listener
      protocol: TCP
      port: 80  # Port on Load Balancer
      targetPort: 80  # Port on POD

    - name: db-listener
      protocol: TCP
      port: 5432  # Port on Load Balancer
      targetPort: 5432  # Port on POD
